// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Run all API tests Get all Ads 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "http://localhost:3001",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Array [
    Object {
      "_id": "6074a27235cd54cce87afbbf",
      "price": 1.3,
      "title": "Soap",
    },
  ],
  "headers": Object {
    "content-length": "63",
    "content-type": "application/json; charset=utf-8",
  },
  "request": XMLHttpRequest {},
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Run all API tests Insert a new Ad 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "data": "{\\"title\\":\\"Pizza\\",\\"price\\":10.5}",
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "http://localhost:3001",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "ad": Object {
      "connection": Object {
        "host": "127.0.0.1",
        "id": 0,
        "port": 51456,
      },
      "insertedCount": 1,
      "insertedId": "6074a27235cd54cce87afbc0",
      "n": 1,
      "ok": 1,
      "ops": Array [
        Object {
          "_id": "6074a27235cd54cce87afbc0",
          "price": 10.5,
          "title": "Pizza",
        },
      ],
      "result": Object {
        "n": 1,
        "ok": 1,
      },
    },
    "message": "New ad inserted.",
  },
  "headers": Object {
    "content-length": "258",
    "content-type": "application/json; charset=utf-8",
  },
  "request": XMLHttpRequest {},
  "status": 200,
  "statusText": "OK",
}
`;
